2009-08-22  Martin Robinson  <martin.james.robinson@gmail.com>

        Reviewed by Xan Lopez.

        [GTK] BitmapImage::getGdkPixbuf does not handle alpha channels properly
        https://bugs.webkit.org/show_bug.cgi?id=28345

        When doing the conversion between cairo_surface_t* and GdkPixbuf*
        account for the differences in the respective formats' in-memory
        image format.

        * platform/graphics/gtk/ImageGtk.cpp:
        (WebCore::getCairoSurfacePixel):
        (WebCore::getGdkPixbufPixel):
        (WebCore::BitmapImage::getGdkPixbuf):

2009-08-22  Darin Adler  <darin@apple.com>

        Reviewed by Oliver Hunt.

        Make DOM classes start with a reference count of 1, like all other RefCounted
        
        Next step: Element, HTMLElement, HTMLAnchorElement, HTMLAppletElement,
        HTMLAreaElement, HTMLEmbedElement, HTMLFrameElement, HTMLIFrameElement,
        HTMLObjectElement, HTMLPlugInElement, HTMLPlugInImageElement.

        * DerivedSources.make: Fix error seen every time we build by escaping the $
        in the build rule, since you have to use $$ for that in make.

        * WebCore.base.exp: Updated.

        * bindings/objc/DOM.mm:
        Added now-needed include of SVGNames.h.

        * dom/Document.cpp: Added now-needed include of SVGNames.h.
        (WebCore::Document::createElement): Use create instead of new.

        * dom/Element.cpp:
        (WebCore::Element::Element): Added ConstructionType argument so the caller
        can determine whether this starts with a reference count of either 0 or 1.
        Later we will remove this again once they are all 1.
        (WebCore::Element::create): Added.

        * dom/Element.h: Added create and made constructor protected.

        * dom/StyledElement.cpp:
        (WebCore::StyledElement::StyledElement): Added ConstructionType argument.
        * dom/StyledElement.h: Made many functions protected or private, including
        the constructor.
